# cfp-please

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  sync.yml
agent-studio/: config.json  sync.sh
agents/: README.md  created-agents.json  hero-selection-agent.json  inspire-agent.json  match-score-agent.json
cfp_pipeline/: SOURCES.md  cli.py  models.py  pipeline.py  verify_intel.py
cfp_pipeline/discovery/: __init__.py  engine.py  graph.py
cfp_pipeline/enrichers/: __init__.py  favicon.py  llm.py  popularity.py  schema.py  sessionize.py  youtube.py
cfp_pipeline/extractors/: __init__.py  fetch.py  heuristics.py  pipeline.py  platforms.py  structured.py  url_store.py
cfp_pipeline/indexers/: algolia.py  intel.py  speakers.py  talks.py
cfp_pipeline/models/: __init__.py  cfp.py  speaker.py  talk.py
cfp_pipeline/normalizers/: location.py  topics.py
cfp_pipeline/scripts/: audit_descriptions.py  cleanup_garbage_speakers.py  enrich_intel_split.py  (+15 more)
data/: algolia_speakers.json  city_images.json  curated_new_talks.json  devcon_youtube_research.json  gravatar_discoveries.json  speaker_talk_discoveries.json  special-talks.txt  synthetic_events_cfps.csv  synthetic_events_talks.csv  transcript_scan.json  verified_speaker_talks.json
docs/: INTEL_REBUILD_PLAN.md  MAP_V1_IDEATION.md  algolia-speakers.md  paul-louis-nech-talks.md  research-sources.md  target-conferences.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  speakers-cleanup.json  vite.config.ts  vitest.config.ts
scripts/: audit_github_intel.py
tests/: conftest.py
(+74 files in other folders)
